# Donation-Portal-Project

./: .gitignore  manage.py  pyproject.toml  requirements.txt
donationportal/: asgi.py  settings.py  urls.py  wsgi.py
donationportal/static/: styles.css
donationportal/templates/: base.html  messages.html
services/: admin.py  aiding_functions.py  choices.py  custom_azure.py  filters.py  forms.py  models.py  urls.py  views.py
services/migrations/: 0001_initial.py  0002_alter_donor_last_donated.py  0002_donor_slug.py  0002_remove_donor_address_donor_house_no_donor_pin_code_and_more.py  0002_rename_compatible_typrs_donor_compatible_types.py  0002_rename_donor_donorapproval_accepting_donor.py  0003_alter_donor_compatible_types.py  0003_donor_date_of_birth.py  0003_donor_role.py  0003_donorrequest_donorapproval.py  0003_rename_accepting_donor_donorapproval_donor.py  0004_donor_contact.py  0004_donorrequest_request_status.py  0004_donorrequest_requirements_and_more.py  0005_alter_donorrequest_date.py  0005_rename_donor_donorapproval_donor_a_and_more.py  0006_alter_donorrequest_date.py  0006_rename_donor_r_donorrequest_donor.py  0007_alter_donorrequest_requirements.py  0007_donorrequest_date_of_birth.py  0008_donorrequest_include_compatible_blood.py  0008_remove_donorrequest_date_of_birth.py
services/templates/account/: login.html  signup.html
services/templates/services/: home.html  landing_page.html  profile.html  request.html  request_blood.html  view_all_requests.html  view_requests.html  views.html
services/templatetags/: custom_tags.py
(+1 files in other folders)
